# vosfs

./: .fsspec-cli-release-please-manifest.json  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  fsspec-cli-release-please-config.json  fsspec-cli.md  pyproject.toml  release-please-config.json  versions.json  zensical.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  fsspec-cli-live.yml  fsspec-cli-publish.yml  fsspec-cli-release.yml  pages.yml  publish.yml  release.yml
.superpowers/sdd/: task-123-report.md  task-124-report.md  task-125-report.md  task-127-report.md  task-129-report.md  task-132-report.md  task-140-report.md  task-141-report.md
0.2.0/: 404.html  index.html  objects.inv  search.json  sitemap.xml
0.2.0/api-reference/: index.html
0.3.0/: 404.html  index.html  objects.inv  search.json  sitemap.xml
0.3.0/api-reference/: index.html
0.3.0/guide/: index.html
dev/: 404.html  index.html  objects.inv  search.json  sitemap.xml
dev/api-reference/: index.html
dev/guide/: index.html
docs/adr/: 0001-release-fsspec-cli-independently.md  0002-own-async-filesystems-per-invocation.md  0003-acquire-command-sources-before-filesystem-work.md  0003-acquire-referenced-async-filesystem-sources.md  0004-add-opt-in-command-extensions.md  0005-define-typer-owned-commands-and-callback-extensions.md
docs/agents/: domain.md  release.md
docs/design/: fsspec-cli-base-mkdir-command-profile.md  fsspec-cli-base-rm-command-profile.md  fsspec-cli-base-rmdir-command-profile.md  fsspec-cli-basename-command-profile.md  fsspec-cli-basename-suffix-command-profile.md  fsspec-cli-bsd-macos-stat-command-profile.md  fsspec-cli-cat-stdin-command-profile.md  fsspec-cli-cross-source-cp-command-profile.md  fsspec-cli-cross-source-mv-rejection-profile.md  fsspec-cli-dirname-command-profile.md  fsspec-cli-du-command-profile.md  fsspec-cli-extension-roadmap.md  fsspec-cli-find-command-profile.md  fsspec-cli-head-command-profile.md  fsspec-cli-implementation-handoff.md  fsspec-cli-info-command-profile.md  fsspec-cli-issue-120-catalog.md  fsspec-cli-issue-120-claim-evidence-audit.md  fsspec-cli-later-release-verification.md  fsspec-cli-ls-long-command-profile.md  fsspec-cli-ls-long-rejection-profile.md  fsspec-cli-mkdir-p-command-profile.md  fsspec-cli-multi-source-cp-command-profile.md  fsspec-cli-plain-cat-command-profile.md  fsspec-cli-plain-ls-command-profile.md  fsspec-cli-recursive-cp-rejection-profile.md  fsspec-cli-rm-directory-command-profile.md  fsspec-cli-rm-force-command-profile.md  fsspec-cli-rm-recursive-command-profile.md  fsspec-cli-rm-recursive-rejection-profile.md  fsspec-cli-rm-verbose-command-profile.md  fsspec-cli-same-source-cp-command-profile.md  fsspec-cli-same-source-multi-file-mv-command-profile.md  fsspec-cli-same-source-mv-command-profile.md  fsspec-cli-shell-experience-spec.md  fsspec-cli-sign-extension-profile.md  fsspec-cli-size-command-profile.md  fsspec-cli-tail-command-profile.md  fsspec-cli-test-command-profile.md  fsspec-cli-tested-command-matrix.md  (+5 more)
docs/research/: canfar-release-mechanism-comparison.md  fsspec-backend-tribal-knowledge.md  fsspec-cli-async-execution-boundary.md  fsspec-cli-bsd-macos-stat-fixture-vectors.md  fsspec-cli-bsd-macos-stat-viability.md  fsspec-cli-ls-long-viability.md  fsspec-cli-plain-ls-capability-floor.md  fsspec-cli-plain-ls-prototype.md  opencadc-vos-supported-api.md  python-development-baseline.md  uv-workspace-and-release-please.md  vosfs-contract-gap-analysis.md  vosfs-ivoa-2.1-evaluation.md  vosfs-transfer-endpoint-variability.md  (+3 more)
docs/user/: guide.md  (+2 more)
prototypes/: README.md  fsspec_cli_plain_ls.py  fsspec_cli_plain_ls_demo.py
scripts/: check_pr_metadata.py
src/fsspec-cli/: CHANGELOG.md  README.md  pyproject.toml
src/fsspec-cli/src/fsspec_cli/: __init__.py  _app.py  _basename.py  _cat.py  _command.py  _cp.py  _diagnostics.py  _dirname.py  _du.py  _find.py  _head_tail.py  _info.py  _listing.py  _ls.py  _mkdir.py  _mv.py  _path.py  _recursive_cp.py  _recursive_rm.py  _rm.py  _rmdir.py  _size.py  _sources.py  _stat.py  _test.py  _tree.py  _unlink.py  extensions.py
src/fsspec-cli/tests/: __init__.py  _basename_process_child.py  _cat_process_child.py  _dirname_process_child.py  _du_matrix_support.py  _info_process_child.py  _installed_wheel_gate.py  _live_opencadc_gate.py  _matrix_support.py  _output_process_child.py  _process_watchdog.py  _support.py  test_app.py  test_basename.py  test_basename_process.py  test_cat.py  test_cat_process.py  test_command_labels.py  test_command_matrix.py  test_cp.py  test_directory_listing.py  test_dirname.py  test_dirname_process.py  test_distribution.py  test_du.py  test_du_command_matrix.py  test_find.py  test_find_command_matrix.py  test_head_tail.py  test_head_tail_command_matrix.py  test_info.py  test_info_command_matrix.py  test_listing.py  test_live_opencadc_gate.py  test_live_opencadc_workflow.py  test_long_directory_listing.py  test_mkdir.py  test_mv.py  test_output.py  test_output_process.py  (+24 more)
src/fsspec-cli/tools/: __init__.py  verify_release.py
tests/: conftest.py  namespace_support.py  recorder.py  test_abstract.py  test_bulk.py  test_capabilities.py  test_ci_contract.py  test_commitizen_titles.py  test_config.py  test_conformance.py  test_copy.py  test_degradation.py  test_errors.py  test_filesystem_foundation.py  test_fsspec_cli_plain_ls_prototype.py  test_integration.py  test_lifecycle_process.py  test_move.py  test_namespace.py  test_negotiate.py  test_nodeops.py  test_nodes.py  test_paths.py  test_pr_metadata.py  test_read.py  test_recorder.py  test_release_workflow_contract.py  test_scistack.py  test_transport.py  test_vosfs.py  test_write.py  test_write_coordination.py  test_write_coordination_scope.py  vospace_sim.py
v0.3.2/: 404.html  index.html  sitemap.xml
v0.3.3/: 404.html  index.html  sitemap.xml
v0.4.0/: 404.html  index.html  sitemap.xml
v0.5.0/: 404.html  index.html  objects.inv  search.json  sitemap.xml
v0.6.0/: 404.html  index.html  sitemap.xml
(+43 files in other folders)
