[project]
name = "vosfs"
version = "0.1.0"
description = "VOSpace FileSystem"
readme = "README.md"
authors = [
    { name = "Shiny Brar  (he/il)", email = "charanjotbrar@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fsspec>=2026.6.0",
]

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
