[project]
name = "vosfs"
version = "0.3.3"
description = "An asynchronous fsspec filesystem for the OpenCADC VOSpace profile"
readme = "README.md"
authors = [
    { name = "Shiny Brar  (he/il)", email = "charanjotbrar@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "defusedxml>=0.7",
    "fsspec>=2026.6.0",
    "httpx>=0.27",
]

[project.entry-points."fsspec.specs"]
vos = "vosfs:VOSpaceFileSystem"

[build-system]
requires = ["uv_build>=0.11.29,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "commitizen>=4.16.5,<5",
    "dask[dataframe]>=2026.7.1",
    "lxml>=5",
    "mike @ git+https://github.com/squidfunk/mike.git@2d4ad799442f4592db8ad53b179bfb33db8c69ac",
    "mkdocstrings-python>=2.0.5",
    "numpy>=1.26",
    "pandas>=2",
    "pre-commit>=4.6.0",
    "pyarrow>=15",
    "pymarkdownlnt>=0.9.39",
    "pytest>=9.1.1",
    "pytest-asyncio>=0.24",
    "pytest-cov>=7.1.0",
    "respx>=0.21",
    "ruff>=0.15.21",
    "ty>=0.0.60",
    "zarr>=3 ; python_full_version >= '3.11'",
    "zensical>=0.0.50",
]

[tool.pytest]
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    "-m",
    "not integration",
    "--cov=vosfs",
    "--cov-report=term-missing",
]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that require a live VOSpace service",
]

[tool.coverage.run]
branch = true
source = ["vosfs"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # Conflicts with the formatter.
    "ISC001", # Conflicts with the formatter.
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = [
    "ANN",  # Tests are outside the ty gate.
    "D",    # Tests describe behavior through their names.
    "INP001", # Tests do not need to form a Python package.
    "S101", # pytest assertions are expected.
    "S105", # Literal token/secret values are fixtures, not real credentials.
    "S106", # Literal token/secret arguments are fixtures, not real credentials.
    "SLF001", # Tests exercise internal seams and coroutine hooks by design.
    "PLR2004", # Status codes and sizes are self-evident magic values in tests.
    "FBT001", # Parametrized tests pass boolean cases positionally.
    "PLC0415", # Optional-dependency imports are local, guarded by importorskip.
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true

[tool.ty.src]
exclude = ["tests/"]

[tool.uv.workspace]
members = ["src/fsspec-cli"]

[tool.commitizen]
name = "cz_customize"

[tool.commitizen.customize]
message_template = "{{change_type}}{% if scope %}({{scope}}){% endif %}{% if breaking %}!{% endif %}: {{subject}}{% if body %}\n\n{{body}}{% endif %}{% if breaking %}\n\nBREAKING CHANGE: {{breaking}}{% endif %}{% if footer %}\n\n{{footer}}{% endif %}"
example = "feat(filesystem): add authenticated reads"
schema = "<type>(<scope>): <description>"
schema_pattern = "(?s)^(feat|fix|docs|style|refactor|perf|test|build|ci|chore|revert)(\\(\\S+\\))?!?: [^\\r\\n]+((\\r?\\n\\r?\\n.*)|(\\s*))?$"

[[tool.commitizen.customize.questions]]
type = "list"
name = "change_type"
message = "Select the type of change"
choices = [
    { value = "feat", name = "feat: A new feature" },
    { value = "fix", name = "fix: A bug fix" },
    { value = "docs", name = "docs: Documentation only" },
    { value = "style", name = "style: Formatting without behavior changes" },
    { value = "refactor", name = "refactor: Neither a feature nor a fix" },
    { value = "perf", name = "perf: A performance improvement" },
    { value = "test", name = "test: Add or correct tests" },
    { value = "build", name = "build: Build system or dependencies" },
    { value = "ci", name = "ci: Continuous integration" },
    { value = "chore", name = "chore: Maintenance" },
    { value = "revert", name = "revert: Revert a previous change" },
]

[[tool.commitizen.customize.questions]]
type = "input"
name = "scope"
message = "Scope (optional)"

[[tool.commitizen.customize.questions]]
type = "input"
name = "subject"
message = "Imperative description"

[[tool.commitizen.customize.questions]]
type = "input"
name = "body"
message = "Body (optional)"
multiline = true

[[tool.commitizen.customize.questions]]
type = "input"
name = "breaking"
message = "Breaking change description (optional)"

[[tool.commitizen.customize.questions]]
type = "input"
name = "footer"
message = "Footer (optional)"
multiline = true
